feat(all): enable tests for callbacks and remove guest authentication
